<resources>
    <string name="app_name">Snooker</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="score">0</string>
    <string name="one_point">+1 point</string>
    <string name="two_points">+2 points</string>
    <string name="three_points">+3 points</string>
    <string name="four_points">+4 points</string>
    <string name="five_points">+5 points</string>
    <string name="six_points">+6 points</string>
    <string name="seven_points">+7 points</string>
    <string name="reset">reset</string>
</resources>
